--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Site</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Welcome To My Site</title>
 </head>
+
 <body>
-    <h1>Welcome To My Site!</h1>
+    <div class="container">
+        <h1>Frankie Barrios The
+            <span class="txt-type" data-wait="2000" data-words='["Developer", "Designer", "Creator"]'></span>
+        </h1>
+        <h2>Welcome To My Website</h2>
+    </div>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
