--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Frankie Barrios The
-            <span class="txt-type" data-wait="2000" data-words='["Developer", "Programmer", "Builder"]'></span>
+            <span class="txt-type" data-wait="2000" data-words='["Developer", "Innovator", "Builder"]'></span>
         </h1>
         <h2>Welcome To My Website</h2>
     </div>
