--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--For Social Media Icons-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
         crossorigin='anonymous'>
-<link rel="icon" type="image/png" href="favIcon.png" style="border-radius: 25px;">
+<link rel="icon" type="image/png" href="favIcon2.png" style="border-radius: 25px;">
     <title>Welcome To My Site</title>
 </head>
 
