--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="container">
         <h1>Frankie Barrios The
-            <span class="txt-type" data-wait="2000" data-words='["Developer", "Innovator", "Builder"]'></span>
+            <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Gangsta"]'></span>
         </h1>
         <h2>Welcome To My Website</h2>
     </div>
