--- a/index.html
+++ b/index.html
@@ -69,18 +69,26 @@ background-color:rgba(0, 0, 0, 0.3);
 <body>
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
+        <!--This operator allows evaluating expressions that produce a value into places where an 
+            expression that evaluates to undefined is desired.
+
+            The void operator is often used merely to obtain the undefined primitive value, usually using "void(0)" 
+            (which is equivalent to "void 0"). In these cases, the global variable undefined can be used instead 
+            (assuming it has not been assigned to a non-default value).-->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
+        <a href="test.html">About</a>
         <a href="#">Contact</a>
     </div>
     
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
     
     <script>
+        //Opens Menu by increasing width to 100%
         function openNav() {
             document.getElementById("mySidenav").style.width = "100%";
         }
 
+        //Closes the menu by decreasing width to 0
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
         }
