--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ background-color:rgba(0, 0, 0, 0.3);
             (which is equivalent to "void 0"). In these cases, the global variable undefined can be used instead 
             (assuming it has not been assigned to a non-default value).-->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="test.html">About</a>
+        <a href="about.html">About</a>
         <a href="#">Contact</a>
     </div>
     
