Style Changes, added contact.html

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ position: fixed;
 z-index: 1;
 top: 0;
 left: 0;
-background-color:rgba(0, 0, 255, 0.3);
+background-color:rgba(0, 0, 0, 0.3);
 overflow-x: hidden;
 transition: 0.5s;
 padding-top: 60px;
@@ -75,7 +75,7 @@ font-size: 18px;
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
 </div>
 
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
