--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favIcon2.png">
     <!--Side Nav Styling-->
     <style>
         /* body {
