Designing Pages and Form

--- a/contactSubmitted.html
+++ b/contactSubmitted.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact</title>
+    <title>Info Received</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favIcon2.png">
     <!--Side Nav Styling-->
@@ -61,56 +61,6 @@ font-family: "Lato", sans-serif;
             }
         }
     </style>
-    <!--Side Nav Style Ending-->
-
-<!--Contact Form Stylingn Start-->
-<style>
-    body {
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    * {
-        box-sizing: border-box;
-    }
-
-    input[type=text],
-    select,
-    textarea {
-        width: 100%;
-        padding: 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-        margin-top: 6px;
-        margin-bottom: 16px;
-        resize: vertical;
-    }
-
-    input[type=submit] {
-        background-color: gray;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-margin: 0 auto;
-display: block;
-    }
-
-    input[type=submit]:hover {
-background-color: darkgray;
-    }
-
-    .container {
-        border-radius: 25px;
-        background-color: #f2f2f2;
-        padding: 60px;
-        width: 37%;
-        height: 79%;
-        margin: auto;
-    }
-</style>
-<!--Contact Form Stylingn End-->
 </head>
 
 <body>
@@ -142,30 +92,6 @@ background-color: darkgray;
         }
     </script>
     <!--Side Nav Bar Ending-->
-    
-<h3 style="text-align: center; font-size: x-large; color: white;font-weight: 100;">Contact Form</h3>
-
-<div class="container">
-    <form action="contactSubmitted.html">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-        <label for="country">Country</label>
-        <select id="country" name="country">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
-        </select>
-
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-        <input type="submit" value="Submit">
-    </form>
-</div>
 </body>
 
 </html>
