--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me</title>
+    <title>About</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favIcon2.png">
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
     <!--Side Nav Styling-->
     <style>
         /* body {
@@ -65,6 +65,7 @@ font-family: "Lato", sans-serif;
 </head>
 
 <body>
+    
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
