--- a/contactSubmitted.html
+++ b/contactSubmitted.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Info Received</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favIcon2.png">
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
     <!--Side Nav Styling-->
     <style>
         /* body {
