--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favIcon2.png">
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
     <!--Side Nav Styling-->
     <style>
-        /* body {
-font-family: "Lato", sans-serif;
-} */
+         body {
+font-weight: 100;
+} 
 
         .sidenav {
             height: 100%;
@@ -63,7 +63,7 @@ font-family: "Lato", sans-serif;
     </style>
     <!--Side Nav Style Ending-->
 
-<!--Contact Form Stylingn Start-->
+<!--Contact Form Styling Start-->
 <style>
     body {
         font-family: Arial, Helvetica, sans-serif;
