--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!--For Social Media Icons-->
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
         crossorigin='anonymous'>
-    <link rel="icon" type="image/png" href="favIcon2.png">
-    <title>Welcome To My Site</title>
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
+    <title>Welcome</title>
     <!--Side Nav Styling-->
     <style>
         /* body {
