Styling Contact Page and Form

--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact2</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="contact2Styles.css">
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
-
 </head>
 
 <body>
@@ -42,6 +40,7 @@
     </script>
     <!--Side Nav Bar Ending-->
 
+    <h2 style="text-align: center;font-weight: 400;font-size:55px;">Contact Form</h2>
     <!--Form Start-->
     <div class="container">
         <form action="contactSubmitted.html">
