--- a/index.html
+++ b/index.html
@@ -11,60 +11,6 @@
         crossorigin='anonymous'>
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
     <title>Welcome</title>
-    <!--Side Nav Styling-->
-    <style>
-        /* body {
-            font-family: "Lato", sans-serif;
-        } */
-
-        .sidenav {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-            text-align: center;
-        }
-
-        .sidenav a {
-            padding: 65px 8px 8px 32px;
-            text-decoration: none;
-            font-size: 65px;
-            font-weight: 100;
-            color: white;
-            display: block;
-            transition: 0.3s;
-
-        }
-
-        .sidenav a:hover {
-            color: darkgray;
-        }
-
-        .sidenav .closebtn {
-            position: absolute;
-            top: -95px;
-            right: 25px;
-            font-size: 75px;
-            margin-left: 50px;
-        }
-
-        @media screen and (max-height: 450px) {
-            .sidenav {
-                padding-top: 15px;
-            }
-
-            .sidenav a {
-                font-size: 18px;
-            }
-        }
-    </style>
-    <!--Side Nav Style Ending-->
 </head>
 
 <body>
@@ -104,7 +50,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container1">
         <h1>Frankie Barrios The
             <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Gangsta"]'></span>
         </h1>
