--- a/about.html
+++ b/about.html
@@ -7,65 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Style/aboutStyles.css">
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
-    <!--Side Nav Styling-->
-    <style>
-        /* body {
-font-family: "Lato", sans-serif;
-} */
-
-        .sidenav {
-            height: 100%;
-            width: 0;
-            position: fixed;
-            z-index: 1;
-            top: 0;
-            left: 0;
-            background-color: rgba(0, 0, 0, 0.8);
-            overflow-x: hidden;
-            transition: 0.5s;
-            padding-top: 60px;
-            text-align: center;
-        }
-
-        .sidenav a {
-            padding: 100px 8px 8px 32px;
-            text-decoration: none;
-            font-size: 65px;
-            font-weight: 100;
-            color: white;
-            display: block;
-            transition: 0.3s;
-
-        }
-
-        .sidenav a:hover {
-            color: darkgray;
-        }
-
-        .sidenav .closebtn {
-            position: absolute;
-            top: -95px;
-            right: 25px;
-            font-size: 75px;
-            margin-left: 50px;
-        }
-
-        @media screen and (max-height: 450px) {
-            .sidenav {
-                padding-top: 15px;
-            }
-
-            .sidenav a {
-                font-size: 18px;
-            }
-        }
-    </style>
-    <!--Side Nav Style Ending-->
 </head>
 
 <body>
-    
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
