Responsive Contact Form Work

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     </script>
     <!--Side Nav Bar Ending-->
 
-    <h2 style="text-align: center;font-weight: 400;font-size:55px;">Contact Form</h2>
+    <h2 style="text-align: center;font-weight: 400;font-size:55px;padding-bottom: 75px;">Contact Form</h2>
     <!--Form Start-->
     <div class="container">
         <form action="contactSubmitted.html">
