--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
 
         <!-- You only need this form and the form-login.css -->
 
-        <form class="form-login" method="post" action="#">
+        <form class="form-login" method="post" action="contactSubmitted.html">
 
             <div class="form-log-in-with-email">
 
@@ -75,8 +75,10 @@
 
                 </div>
 
-                <a href="#" class="form-forgotten-password">Forgotten password &middot;</a>
-                <a href="#" class="form-create-an-account">Create an account &rarr;</a>
+                <a href="https://help.myspace.com/hc/en-us/articles/201956084-Forgot-Password" class="form-forgotten-password">Forgotten
+                    password &middot;</a>
+                <a href="https://support.google.com/mail/answer/56256?hl=en" class="form-create-an-account">Create an
+                    account &rarr;</a>
 
             </div>
 
@@ -86,9 +88,10 @@
                     <span class="form-title">Sign in with</span>
                 </div>
 
-                <a href="#" class="form-google-button">Google</a>
-                <a href="#" class="form-facebook-button">Facebook</a>
-                <a href="#" class="form-twitter-button">Twitter</a>
+                <a href="https://accounts.google.com/signup/v2/webcreateaccount?hl=en-GB&flowName=GlifWebSignIn&flowEntry=SignUp"
+                    class="form-google-button">Google</a>
+                <a href="https://www.facebook.com/" class="form-facebook-button">Facebook</a>
+                <a href="https://twitter.com/" class="form-twitter-button">Twitter</a>
 
             </div>
 
