--- a/contactSubmitted.html
+++ b/contactSubmitted.html
@@ -22,7 +22,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="login.html">Contact</a>
+        <a href="login.html">Login</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
