--- a/login.html
+++ b/login.html
@@ -8,7 +8,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="loginForm.css">
     <link rel="stylesheet" href="style.css">
-
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
+        crossorigin='anonymous'>
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
 </head>
 
 <body>
