--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="Style/aboutStyles.css">
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
 </head>
 
 <body>
@@ -40,6 +42,39 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
+
+    <!--Left "Pane"/ Aside Starts Here-->
+    <div class="container" style="margin-top:30px">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2>About Me</h2>
+                <img src="Img/me.jpg" alt="Me" style="width:350px;height:700px;">
+                <br><br>
+                <p>My name is Frankie Barrios. I am from Chicago, Ill. I graduate this semester. After graduation I plan on working in the software development field while continuing my education.  </p>
+            </div>
+            <!--Left Ends Here-->
+
+            <!--Right Side Starts Here-->
+            <div class="col-sm-8">
+                <h2>Favorite Non-Tech Hobby</h2>
+                <img src="Img/fight.jpg" alt="Fight" style="width:650px;height:450px;">
+                <p>Kicking @$$ with my fight team at Springfield Fight Club</p>
+                <br>
+                <h2>My Family</h2>
+                <h5></h5>
+                <img src="Img/family.jpg" alt="Pool" style="width:700px;height:450px;">
+                <p><br></p>
+              
+                <p>Love hanging out with my family. Pictured above is my little brother and I with my little girls.</p>
+                <br><br>
+            </div>
+        </div>
+    </div>
+
+  <!--   <div class="jumbotron text-center" style="margin-bottom:0">
+        <p>Barrios Development Corporation &copy; 2018</p>
+    </div> -->
+
 </body>
 
 </html>
