Fixed Overflow on Homepage

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         <a href="login.html">Login</a>
     </div>
 
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+    <span style="font-size:30px;cursor:pointer; color:white;" onclick="openNav()">&#9776; Menu</span>
 
     <script>
         //Opens Menu by increasing width to 100%
@@ -61,7 +61,6 @@
                 <p>Kicking @$$ with my fight team at Springfield Fight Club</p>
                 <br>
                 <h2>My Family</h2>
-                <h5></h5>
                 <img src="Img/family.jpg" alt="Pool" style="width:700px;height:450px;">
                 <p><br></p>
               
