--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Welcome</title>
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
