--- a/login.html
+++ b/login.html
@@ -47,7 +47,8 @@
 
         <!-- You only need this form and the form-login.css -->
 
-<form class="form-login" method="GET" action="contactSubmitted.html"> <!--Never use GET in real login system!-->
+        <form class="form-login" method="GET" action="contactSubmitted.html">
+            <!--Never use GET in real login system!-->
 
             <div class="form-log-in-with-email">
 
