Starting Site Redesign

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="contact.html">Login</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact Me</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
@@ -42,7 +43,7 @@
     }
 </script>
     <!--Side Nav Bar Ending-->
-
+<h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
     <div class="main-content">
 
         <!-- You only need this form and the form-login.css -->
