--- a/about.html
+++ b/about.html
@@ -7,9 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="Style/aboutStyles.css">
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
 </head>
 
@@ -25,7 +23,8 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="login.html">Login</a>
+        <a href="projects.html">Projects</a>
+        <a href="login.html">Contact Me</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer; color:white;" onclick="openNav()">&#9776; Menu</span>
@@ -42,8 +41,9 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
-<h1>Under Construction</h1>
-   
+<h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double;">Under
+    Construction</h1>
+
 
 </body>
 
