--- a/projects.html
+++ b/projects.html
@@ -5,15 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <!--For Social Media Icons-->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
-        crossorigin='anonymous'>
-    <link rel="icon" type="image/png" href="Img/favIcon2.png">
-    <title>Welcome</title>
+    <title>Projects</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 
-<body style="overflow: hidden;">
+<body>
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
@@ -25,9 +21,8 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
-        <a href="projects.html">Projects</a> 
-        <a href="login.html">Contact Me</a>
-
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact Me</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
@@ -44,22 +39,8 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
+<h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under Construction</h1>
 
-    <!--TypeWriter Effect/ Title-->
-    <div class="header">
-        <div class="progress-container">
-            <div class="progress-bar" id="myBar"></div>
-        </div>
-    </div>
-
-    <div class="container1">
-        <h1>Frankie Barrios The
-            <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Gangsta"]'></span>
-        </h1>
-        <h2>Welcome To My Website</h2>
-    </div>
-
-    <script src="main.js"></script>
 </body>
 
 </html>
