--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
-        <a href="login.html">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
     </div>
 
     <span style="font-size:30px;cursor:pointer; color:white;" onclick="openNav()">&#9776; Menu</span>
