--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a> 
-        <a href="login.html">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
 
     </div>
 
