Added tab icon to contact page

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projects</title>
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="Img/favIcon2.png">
+
 </head>
 
 <body>
@@ -39,7 +41,8 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
-<h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under Construction</h1>
+    <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under
+        Construction</h1>
 
 </body>
 
