Added title to array

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container1">
         <h1>Frankie Barrios The
-            <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Gangsta"]'></span>
+            <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Innovator"]'></span>
         </h1>
         <h2>Welcome To My Website</h2>
     </div>
