--- a/contact.html
+++ b/contact.html
@@ -44,64 +44,9 @@
 </script>
     <!--Side Nav Bar Ending-->
 <h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
-    <div class="main-content">
-
-        <!-- You only need this form and the form-login.css -->
-
-        <form class="form-login" method="GET" action="contactSubmitted.html">
-            <!--Never use GET in real login system!-->
-
-            <div class="form-log-in-with-email">
-
-                <div class="form-white-background">
-
-                    <div class="form-title-row">
-                        <h1>Log in</h1>
-                    </div>
-
-                    <div class="form-row">
-                        <label>
-                            <span>Email</span>
-                            <input type="email" name="email">
-                        </label>
-                    </div>
-
-                    <div class="form-row">
-                        <label>
-                            <span>Password</span>
-                            <input type="password" name="password">
-                        </label>
-                    </div>
-
-                    <div class="form-row">
-                        <button type="submit">Log in</button>
-                    </div>
-
-                </div>
-
-                <a href="https://help.myspace.com/hc/en-us/articles/201956084-Forgot-Password" class="form-forgotten-password">Forgotten
-                    password &middot;</a>
-                <a href="https://support.google.com/mail/answer/56256?hl=en" class="form-create-an-account">Create an
-                    account &rarr;</a>
-
-            </div>
-
-            <div class="form-sign-in-with-social">
-
-                <div class="form-row form-title-row">
-                    <span class="form-title">Sign in with</span>
-                </div>
-
-                <a href="https://accounts.google.com/signup/v2/webcreateaccount?hl=en-GB&flowName=GlifWebSignIn&flowEntry=SignUp"
-                    class="form-google-button">Google</a>
-                <a href="https://www.facebook.com/" class="form-facebook-button">Facebook</a>
-                <a href="https://twitter.com/" class="form-twitter-button">Twitter</a>
-
-            </div>
-
-        </form>
-
-    </div>
+<h2 style="text-align: center; color:white;"><strong>Please contact me via email at </strong><a href="mailto:softwaredevfb@gmail.com"
+        style="color:white;"><strong>softwaredevfb@gmail.com</strong></strong></a></h2>
+<h2></h2>
 </body>
 
 </html>
