--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,7 @@
     <!--Side Nav Bar Ending-->
     <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under
         Construction</h1>
+    <h2 style="text-align: center; color:white;"><strong>Please visit </strong><a href ="https://github.com/SoftDevFb" style="color:white;">https://github.com/SoftDevFb</a><strong> to view my projects.</strong></h2>
 
 </body>
 
