Text Weight Change

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
@@ -43,9 +43,9 @@
     <!--Side Nav Bar Ending-->
     <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double;">Under
         Construction</h1>
-    <h2 style="text-align: center; color:white;"><strong>Please visit </strong><a href="https://www.linkedin.com/in/frank-barrios/"
-            style="color:white;">https://www.linkedin.com/in/frank-barrios/</a><strong>
-            for my info.</strong></h2>
+    <h2 style="text-align: center; color:white;">Please visit <a href="https://www.linkedin.com/in/frank-barrios/"
+            style="color:white;">https://www.linkedin.com/in/frank-barrios/</a>
+            for my info.</h2>
 
 
 </body>
