--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
-    <link rel="stylesheet" href="loginForm.css">
     <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU'
         crossorigin='anonymous'>
     <link rel="icon" type="image/png" href="Img/favIcon2.png">
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
@@ -44,8 +43,8 @@
     </script>
     <!--Side Nav Bar Ending-->
     <h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
-    <h2 style="text-align: center; color:white;"><strong>Please contact me via email at </strong><a href="mailto:softwaredevfb@gmail.com"
-            style="color:white;"><strong>softwaredevfb@gmail.com</strong></strong></a></h2>
+    <h2 style="text-align: center; color:white;">Please contact me via email at <a href="mailto:softwaredevfb@gmail.com"
+            style="color:white;">softwaredevfb@gmail.com</a></h2>
     <h2></h2>
 </body>
 
