--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 </head>
 
-<body>
+<body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
         <!--This operator allows evaluating expressions that produce a value into places where an 
@@ -43,8 +43,8 @@
     <!--Side Nav Bar Ending-->
     <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under
         Construction</h1>
-    <h2 style="text-align: center; color:white;"><strong>Please visit </strong><a href="https://github.com/SoftDevFb"
-            style="color:white;">https://github.com/SoftDevFb</a><strong> to view my projects.</strong></h2>
+    <h2 style="text-align: center; color:white;">Please visit <a href="https://github.com/SoftDevFb"
+            style="color:white;">https://github.com/SoftDevFb</a> to view my projects.</h2>
 
 </body>
 
