--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,9 @@
     <!--Side Nav Bar Ending-->
     <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under
         Construction</h1>
-    <h2 style="text-align: center; color:white;">Please visit <a href="https://github.com/SoftDevFb"
-            style="color:white;">https://github.com/SoftDevFb</a> to view my projects.</h2>
+    </br>
+    <h2 style="text-align: center; color:white;">Please visit <a href="https://github.com/SoftDevFb" style="color:white;">https://github.com/SoftDevFb</a>
+        to view my projects.</h2>
 
 </body>
 
