Centered TypeWriter and Reorganized Menus

--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,10 @@
 <body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
-        <!--This operator allows evaluating expressions that produce a value into places where an 
-            expression that evaluates to undefined is desired.
-
-            The void operator is often used merely to obtain the undefined primitive value, usually using "void(0)" 
-            (which is equivalent to "void 0"). In these cases, the global variable undefined can be used instead 
-            (assuming it has not been assigned to a non-default value).-->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="index.html">Home</a>    
         <a href="projects.html">Projects</a>
+        <a href="about.html">About Me</a>
         <a href="contact.html">Contact Me</a>
     </div>
 
@@ -42,6 +36,7 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
+
     <h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
     </br>
     <h2 style="text-align: center; color:white;">Please contact me via email at <a href="mailto:softwaredevfb@gmail.com"
