--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,21 +15,15 @@
 <body style="overflow: hidden;">
     <!--Side Nav Bar Start-->
     <div id="mySidenav" class="sidenav">
-        <!--This operator allows evaluating expressions that produce a value into places where an 
-            expression that evaluates to undefined is desired.
-
-            The void operator is often used merely to obtain the undefined primitive value, usually using "void(0)" 
-            (which is equivalent to "void 0"). In these cases, the global variable undefined can be used instead 
-            (assuming it has not been assigned to a non-default value).-->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
+        <a href="about.html">About Me</a> 
         <a href="contact.html">Contact Me</a>
 
     </div>
 
-    <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+    <span style="font-size:30px;cursor:pointer; " onclick="openNav()">&#9776; Menu</span>
 
     <script>
         //Opens Menu by increasing width to 100%
