--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
             (assuming it has not been assigned to a non-default value).-->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
+        <a href="about.html">About Me</a>
         <a href="contact.html">Contact Me</a>
     </div>
 
@@ -41,8 +41,8 @@
         }
     </script>
     <!--Side Nav Bar Ending-->
-    <h1 style="text-align: center; color:white; font-weight: 200; font-size: 100px; border: 5px white double; ">Under
-        Construction</h1>
+    <h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
+    </br>
     </br>
     <h2 style="text-align: center; color:white;">Please visit <a href="https://github.com/SoftDevFb" style="color:white;">https://github.com/SoftDevFb</a>
         to view my projects.</h2>
