Added Resume Page

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="about.html">About Me</a>
+        <a href="about.html">Resume</a>
         <a href="contact.html">Contact Me</a>
     </div>
 
@@ -35,7 +35,7 @@
     </script>
     <!--Side Nav Bar Ending-->
 
-    <h1 style="text-align: center; color: white; border: 5px white double;">Under Construction</h1>
+    <h1 style="text-align: center; color: white; border: 5px white double ;">Under Construction</h1>
     </br>
     </br>
     <h2 style="text-align: center; color:white;">Please visit <a href="https://www.linkedin.com/in/frank-barrios/"
