--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
         <a href="projects.html">Projects</a>
-        <a href="about.html">About Me</a>
+        <a href="about2.html">Resume</a>
         <a href="contact.html">Contact Me</a>
     </div>
 
