--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h1>Frankie Barrios The
             <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Innovator"]'></span>
         </h1>
-        <h2>Welcome To My Website</h2>
+        <h2>Welcome</h2>
     </div>
 
     <script src="main.js"></script>
