--- a/about2.html
+++ b/about2.html
@@ -52,6 +52,11 @@
                 font-size: 75px;
                 margin-left: 50px;
             }
+            
+            img {
+                border-radius: 25px;
+                border: 2px solid #73AD21;   
+            }
 
             @media screen and (max-height: 450px) {
                 .sidenav {
