--- a/about2.html
+++ b/about2.html
@@ -54,8 +54,8 @@
             }
             
             img {
-                border-radius: 25px;
-                border: 2px solid #73AD21;   
+                border-radius: 50%;
+                   
             }
 
             @media screen and (max-height: 450px) {
