--- a/about2.html
+++ b/about2.html
@@ -94,7 +94,7 @@
     <h1 style="color:white; text-align: center; font-weight: 100; font-size: 55px;">Resume</h1>
     <div id="resume" style="color: white; background-color: black;">
         <header id="header">
-            <img src="profilePic.jpg" alt="Frankie Barrios" />
+            <img src="profilePic.jpg" alt="Frankie Barrios" style="width:200px"/>
             <div class="middle">
                 <h1 class="name">Frankie Barrios</h1>
                 <h2 class="label">Software Engineer</h2>
