--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     </div>
 
     <div class="container1">
-        <h1>Frankie Barrios The
+        <h1 style="font-weight:100;">Frankie Barrios The
             <span class="txt-type" data-wait="2000" data-words='["Developer", "Builder", "Innovator"]'></span>
         </h1>
-        <h2>Welcome</h2>
+       <!-- <h2>Welcome</h2> -->
     </div>
 
     <script src="main.js"></script>
